-Time to create backups has decreased, in some situations even by a factor 
 of 2 or more, speeding up syncing and program exit.
-Also sync relevant settings (e.g. fonts, colours, ...) during the initial
 sync.
-The functionality of mnemosyne-webserver has now been merged into the main
 program.
-Added command line options --sync-server and --web-server which starts the 
 sync and the web server in headless mode (i.e. without a GUI) (useful to run 
 e.g. on a NAS server).
-Added new statistic: number of new cards learned per day.
-Fix more errors coming from loading config files.
-Rework error handling when trying to load a database which no longer exists
 in its previous location.
-When editing a card through the browser, make sure the correct set of tags is
 displayed if sister cards have different tags (requested by Scott Youngman).
-Instruct people on the correct way to deal with '*.cards' files if they try
 to open it as a separate database (Kensor0).
-People writing e.g. Javascript card and needing access to the full path of
 the media directory can now use db_media:///foo.png (requested by Gnome).
-Flash files are now synced as well (reported by heldtfisken).
-When editing a card where different sister cards have different tags, ask if
 the tags should be applied to the current card or to all sister cards.
-Fix Windows crash when using the card browser with cards imported from
 Supermemo (reported by Piotr).
-Make Mnemosyne 1.x import more robust (reported by Jack Thro).
-Don't allow saving the database to a network drive under Windows to prevent
 corruption (reported by Brendan Sinclair).
-Fix sync error that could occur when adding and immediately deleting multiple 
 sister cards from the card browser.
-Fix latex / cloze interaction corner case (reported by Daniele Parisi).
-Make sure latex images are always in sync when updating text.
-If adding an extra tag when importing a 'cards' file, don't keep the tag