@@ -1,7 +1,15 @@
+
+(Note that for Windows users we recommend uninstalling the previous version
+before installing the new one.)
+
+The sync protocol has changed in this version, so make sure you update both
+the client and the server at the same time.
+
 -Time to create backups has decreased, in some situations even by a factor 
  of 2 or more, speeding up syncing and program exit.
 -Also sync relevant settings (e.g. fonts, colours, ...) during the initial
  sync.
+-Improve the timeout handling of the sync protocol.
 -The functionality of mnemosyne-webserver has now been merged into the main
  program.
 -Added command line options --sync-server and --web-server which starts the 
